--- a/react/src/webshop/i18n/translated/en-US.json
+++ b/react/src/webshop/i18n/translated/en-US.json
@@ -362,7 +362,10 @@
             }
         },
         "privacy_link": {
-            "text": "I have read the <a tabIndex=\"3\" class=\"text-primary-light sign_up-pane-link\" name=\"privacy\" target=\"_blank\" href=\"{{ link_url }}\">privacy statement</a> "
+            "text": "I have read the <a tabIndex=\"3\" class=\"text-primary-light sign_up-pane-link\" target=\"_blank\" href=\"{{ link_url }}\">privacy statement</a> "
+        },
+        "terms_link": {
+            "text": "I have read the <a tabIndex=\"3\" class=\"text-primary-light sign_up-pane-link\" target=\"_blank\" href=\"{{ link_url }}\">terms and conditions statement</a> "
         },
         "push": {
             "link_used": {
